# ChangeLog for games-strategy/lgeneral
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/lgeneral/ChangeLog,v 1.31 2010/12/01 05:45:13 mr_bones_ Exp $

*lgeneral-1.2 (01 Dec 2010)

  01 Dec 2010; Michael Sterrett <mr_bones_@gentoo.org> +lgeneral-1.2.ebuild,
  +files/lgeneral-1.2-as-needed.patch, +files/lgeneral-1.2-build.patch,
  +files/lgeneral-1.2-gentoo-path.patch, +files/lgeneral-1.2-make-382.patch:
  version bump

  25 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  lgeneral-1.2_beta13.ebuild, +files/lgeneral-1.2_beta13-make-382.patch:
  Fix building with make >= 3.82 wrt #337610 by Diego E. Pettenò.

  30 Oct 2009; Markus Meier <maekke@gentoo.org> lgeneral-1.2_beta13.ebuild:
  amd64/x86 stable, bug #290055

  21 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org>
  lgeneral-1.2_beta13.ebuild:
  add use-deps for libsdl

*lgeneral-1.2_beta13 (21 Sep 2009)

  21 Sep 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +lgeneral-1.2_beta13.ebuild, +files/lgeneral-1.2_beta13-64bit.patch,
  +files/lgeneral-1.2_beta13-as-needed.patch,
  +files/lgeneral-1.2_beta13-build.patch,
  +files/lgeneral-1.2_beta13-gentoo-path.patch:
  version bump; ebuild submitted by Mr. Anderson via bug #248241

  12 Feb 2009; Alfredo Tupone <tupone@gentoo.org>
  +files/lgeneral-1.2_beta12-as-needed.patch, lgeneral-1.2_beta12-r1.ebuild:
  Fix --as-needed bug #247496 by flameeyes@gentoo.org

  24 May 2007; Christian Faulhammer <opfer@gentoo.org>
  lgeneral-1.2_beta12-r1.ebuild:
  x86/amd64 stable, bug 173488

  15 Jan 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/lgeneral-1.2_beta12-build.patch,
  files/lgeneral-1.2_beta12-gettext.patch, lgeneral-1.2_beta12-r1.ebuild:
  Optional nls, bug #154610

  20 Oct 2006; <tupone@gentoo.org> +files/lgeneral-1.2_beta12-64bit.patch,
  -lgeneral-1.2_beta8.ebuild, -lgeneral-1.2_beta9.ebuild,
  lgeneral-1.2_beta12-r1.ebuild:
  Adding ~amd64 keyword. Bug #111828 by Mike Bonar