@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/lgeneral
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/lgeneral/ChangeLog,v 1.31 2010/12/01 05:45:13 mr_bones_ Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/lgeneral/ChangeLog,v 1.32 2011/01/04 07:24:56 phajdan.jr Exp $
+
+  04 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> lgeneral-1.2.ebuild:
+  x86 stable wrt bug #350434
 
 *lgeneral-1.2 (01 Dec 2010)
 
